--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-select": "^5.0.1",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "sass": "^1.86.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
